src/test/ui/parser/diff-markers/item.stderr
error: encountered diff marker
  --> $DIR/item.rs:1:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ start
LL | fn foo() {}
LL | =======
   | ^^^^^^^ middle
LL | fn bar() {}
LL | >>>>>>> branch
   | ^^^^^^^ end

error: aborting due to previous error

